2015-12-17  Eli Zaretskii  <eliz@gnu.org>

	* auth-source.el (auth-source-ensure-strings):
	Don't make a list out of 't'.  (Bug#22188)

2015-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (byte-optimize-apply): Make the use-mapcan advice work
	for (function nconc) as well as (quote nconc).

2015-12-04  Daiki Ueno  <ueno@gnu.org>

	* qp.el (quoted-printable-encode-region): Bind `case-fold-search' to
	nil when looking for "^From ".  Problem reported by Simon Josefsson.

2015-12-04  Artur Malabarba  <bruce.connor.am@gmail.com>

	* sasl-scram-rfc.el: Add a "Package:" header.

2015-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnml.el (nnml-retrieve-groups): Remove.  See:
	<http://thread.gmane.org/gmane.emacs.gnus.general/86308> and
	<http://thread.gmane.org/gmane.emacs.gnus.general/86321>

2015-11-17  Paul Eggert  <eggert@cs.ucla.edu>

	Fix docstring quoting problems with ‘ '’

	Problem reported by Artur Malabarba in:
	http://lists.gnu.org/archive/html/emacs-devel/2015-11/msg01513.html
	Most of these fixes are to documentation; many involve fixing
	longstanding quoting glitches that are independent of the
	recent substitute-command-keys changes.  The changes to code are:
	* gnus-mlspl.el (gnus-group-split-fancy):
	* hashcash.el (hashcash-extra-generate-parameters):
	* message.el (message-qmail-inject-args, message-cite-reply-position):
	* mm-decode.el (mm-inline-large-images):
	* mm-util.el (mm-xemacs-find-mime-charset-1):

2015-11-11  Eli Zaretskii  <eliz@gnu.org>

	* mm-url.el (mm-url-form-encode-xwfu): Allow argument CHUNK to be nil.
	(Bug#21881)

2015-11-08  Michael Sperber  <mike@xemacs.org>

	* gnus-sum.el (gnus-summary-backend-map): Bind B-backspace to
	`gnus-summary-delete-article` in a way that also works on XEmacs.

2015-11-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* ntlm.el: Change version to 2.0.0.

2015-10-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	Silence lexical-binding warnings
